syntax = "proto3";

package market_data_service;

service MarketDataService {
    rpc GetMarketData (MarketDataRequest) returns (MarketDataResponse) {}
    rpc GetMarketDataStream (MarketDataRequest) returns (stream MarketDataPayload) {}
}

message MarketDataRequest {
    string instrument = 1;
    string date = 2;
}

message MarketDataResponse {
    repeated MarketDataPayload response = 1;
}

message MarketDataPayload {
    string id = 1;
    double ask = 2;
    double bid = 3;
    int64 timestamp = 4;
    string instrument = 5;
    AssetClass asset_class = 6;
    Side side = 7;
    int64 volume = 8;
}

enum AssetClass {
    FX = 0;
    FI = 1;
    COMMODITY = 2;
    EQUITY = 3;
}

enum Side {
    B = 0;
    S = 1;
}